# Banking-System

./: CMakeLists.txt  README.md  pic.qrc  pictures.qrc
Headers/: account.h  accountmeth.h  add.h  addcustomer.h  afterregistering.h  archieve.h  customer.h  customermeth.h  dailytransaction.h  data.h  datae.h  deposit.h  displayemployee.h  displayloans.h  employee.h  employeemenu.h  employeemeth.h  fire.h  functions.h  listaccount.h  loan.h  loanlist.h  loanmeth.h  loans1.h  mainwindow.h  manageloans.h  managermenu.h  modify.h  money.h  requestloan.h  secondwindow1.h  secondwindow2.h  secondwindow3.h  showloans.h  statisticsmeth.h  stats.h  thirdwindow11.h  thirdwindow12.h  transaction.h  transactionmeth.h
Sources/: accountmeth.cpp  add.cpp  addcustomer.cpp  afterregistering.cpp  animatedbutton.cpp  archieve.cpp  customermeth.cpp  dailytransaction.cpp  data.cpp  datee.cpp  deposit.cpp  displayemployee.cpp  displayloans.cpp  employeemenu.cpp  employeemeth.cpp  fire.cpp  functions.cpp  listaccount.cpp  loanmeth.cpp  loans.cpp  loans1.cpp  main.cpp  mainwindow.cpp  manageloans.cpp  managermenu.cpp  modify.cpp  money.cpp  requestloan.cpp  secondwindow1.cpp  secondwindow2.cpp  secondwindow3.cpp  showloans.cpp  statisticsmeth.cpp  stats.cpp  thirdwindow11.cpp  thirdwindow12.cpp  transactionmeth.cpp
Ui Files/: add.ui  addcustomer.ui  afterregistering.ui  archieve.ui  dailytransaction.ui  deposit.ui  displayemployee.ui  displayloans.ui  employeemenu.ui  fire.ui  listaccount.ui  loans1.ui  mainwindow.ui  manageloans.ui  managermenu.ui  modify.ui  money.ui  requestloan.ui  secondwindow1.ui  secondwindow2.ui  secondwindow3.ui  showloans.ui  stats.ui  thirdwindow11.ui  thirdwindow12.ui
